--- a/src/main/resources/templates/admin/adminRequest.html
+++ b/src/main/resources/templates/admin/adminRequest.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>재고관리</title>
+  <title>발주요청</title>
 
   <link rel="stylesheet" href="/css/admin/adminRequest.css">
 </head>
