--- a/src/main/resources/templates/email/request.html
+++ b/src/main/resources/templates/email/request.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <!-- 메일은 header 불필요 -->
-
 <body>
 
   <!-- css/js 파일은 이메일 첨부 불가 -->
@@ -17,32 +16,106 @@
       팬텀북스 발주서
     </h1>
 
-    <div>발주일 : </div>
-    <div>거 래 처 : ${book.companyName}</div>
+    <h2>
+      <div>발주일 : 
+        <span th:text="${today}"></span>
+      </div>
+    </h2>
+    <h2>
+      <div>거 래 처 :
+         <span th:text="${companyName}"></span>
+      </div>
+    </h2>
 
-    <table>
+    <table style="width: 100%;
+                  height: 40px;
+                  border: 1px solid black;">
       <thead>
         <tr>
-          <th>순번</th>
-          <th>출판사</th>
-          <th>부수</th>
-          <th>제목 / 부제</th>
-          <th>저자</th>
-          <th>정가</th>
+          <th style="font-size: 25px;
+                     background-color: beige;
+                     width: 15%;
+                     height: 20px;
+                     border: 1px solid black;">순번</th>
+          <th style="font-size: 25px;
+                    background-color: beige;
+                    width: 15%;
+                    height: 20px;
+                    border: 1px solid black;">출판사</th>
+          <th style="font-size: 25px;
+                    background-color: beige;
+                    width: 15%;
+                    height: 20px;
+                    border: 1px solid black;">부수</th>
+          <th style="font-size: 25px;
+                    background-color: beige;
+                    width: 15%;
+                    height: 20px;
+                    border: 1px solid black;">제목 / 부제</th>
+          <th style="font-size: 25px;
+                    background-color: beige;
+                    width: 15%;
+                    height: 20px;
+                    border: 1px solid black;">저자</th>
+          <th style="font-size: 25px;
+                    background-color: beige;
+                    width: 15%;
+                    height: 20px;
+                    border: 1px solid black;">정가</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td style="text-align: center;">
+          <td style="font-size: 12px;
+                     width: 15%;
+                     height: 20px;
+                     text-align: center;">
             1
           </td>
-          <td th:text="${book.companyName}"></td>
-          <td th:text="${book.bookTitle}"></td>
-          <td th:text="${book.bookWriter}"></td>
-          <td th:text="${book.bookPrice}"></td>
+          <td th:text="${companyName}"
+              style="font-size: 20px;
+                     width: 15%;
+                     height: 20px;
+                     text-align: center;"></td>
+          <td th:text="${currentCount}"
+          style="font-size: 20px;
+          width: 15%;
+          height: 20px;
+          text-align: center;"></td>
+          <td th:text="${bookTitle}"
+          style="font-size: 20px;
+          width: 15%;
+          height: 20px;
+          text-align: center;"></td>
+          <td th:text="${bookWriter}"
+          style="font-size: 20px;
+          width: 15%;
+          height: 20px;
+          text-align: center;"></td>
+          <td th:text="${bookPrice}"
+          style="font-size: 20px;
+          width: 15%;
+          height: 20px;
+          text-align: center;"></td>
         </tr>
       </tbody>
     </table>
+    <h2  style="text-align: center;
+                display: flex;
+                flex-align: row;
+                justify-content: space-around;">
+      <div>총 발주 부수 : <label th:text="${currentCount}"></label></div>      
+      <div>총 상품 부수 : <label th:text="${currentCount}"></label></div>     
+    </h2>
+
+
+    <h4 style="font-size: 15px;">
+      [PHANTOM BOOKS] <br>
+      대표 정원근 <br>
+      서울특별시 종로구 남대문로 120, 2층 <br>
+      대표전화: 1800-0000 <br>
+      이메일: ask@Phantom.inc <br>
+    </h4>
 
   </div>
 </body>
