241127 // 문의내역 조회 완료. 상세조회 시 수정 삭제 목록으로 이동 기능 생성 중. 목록으로는 이미 끝

--- a/src/main/resources/static/css/customer/inquiry.css
+++ b/src/main/resources/static/css/customer/inquiry.css
@@ -99,7 +99,7 @@ header {
   border-radius: 5px;
 }
 
-.pagination a:hover {
+.pagination a:hover, .pagination .current {
   background-color: #205375;
   color: white;
 }
