--- a/src/main/resources/templates/customer/inquiry.html
+++ b/src/main/resources/templates/customer/inquiry.html
@@ -22,15 +22,16 @@
                     <option value="3">3개월</option>
                     <option value="6">6개월</option>
                     <option value="12">1년</option>
+
                 </select>
-                
-                <label for="startDate">시작일:</label>
-                <input type="date" id="startDate">
-
-                <label for="endDate">종료일:</label>
-                <input type="date" id="endDate">
-
-                <button id="searchButton">조회</button>
+                <div>
+                    <label for="startDate">시작일:</label>
+                    <input type="date" id="startDate">
+    
+                    <label for="endDate">종료일:</label>
+                    <input type="date" id="endDate">
+                </div>
+                <buton id="searchButton">조회</buton>
             </div>
 
             <div class="inquiry-button-area">
