--- a/src/main/resources/templates/customer/query.html
+++ b/src/main/resources/templates/customer/query.html
@@ -69,7 +69,7 @@
 
   <script>
     // Quill 에디터 초기화
-    var quill = new Quill('#editor-container', { // 대문자 Q로 수정
+    var quill = new Quill('#editor-container', { 
       theme: 'snow',
       modules: {
         toolbar: [
