--- a/src/main/resources/templates/searchBookPage/bookDetail.html
+++ b/src/main/resources/templates/searchBookPage/bookDetail.html
@@ -44,7 +44,8 @@
             <span th:text="${book.bookPrice}"></span>원
           </div>
           <div class="book-detail-mileage">
-            <span th:text="${T(java.lang.Math).round(book.bookPrice * 0.05)}"></span>마일리지
+            <span th:text="${T(java.lang.Math).round(5000 * 0.05)}">0</span> 마일리지
+            
           </div>
           <div class="book-detail-shipping">배송비 3,500원</div>
         </div>
