--- a/src/main/resources/templates/admin/adminManager.html
+++ b/src/main/resources/templates/admin/adminManager.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>재고관리</title>
-
+  
+  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/admin/adminManager.css">
 </head>
 <body>
