--- a/src/main/resources/templates/admin/adminRequest.html
+++ b/src/main/resources/templates/admin/adminRequest.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>발주요청</title>
-
+  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/admin/adminRequest.css">
 </head>
 <body>
@@ -110,7 +110,7 @@
           <input type="text" id="searchText" class= "hidden">
         </div>
         <label class="view-dropdown">
-          <select id="viewSelect" >
+          <select id="viewSelect">
               <option value="10">10개</option>
               <option value="20">20개</option>
               <option value="50">50개</option>
