--- a/src/main/resources/templates/admin/adminMyPage.html
+++ b/src/main/resources/templates/admin/adminMyPage.html
@@ -6,6 +6,7 @@
   <title>관리자 정보 수정</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/admin/adminMyPage.css">
+  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
   
 </head>
 <body>
