--- a/src/main/resources/templates/admin/adminNewBook.html
+++ b/src/main/resources/templates/admin/adminNewBook.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>관리자 문의 관리 페이지</title>
+  <title>새 책 등록</title>
 
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/admin/adminFaq.css">
+  <link rel="stylesheet" href="/css/admin/adminNewBook.css">
 </head>
 <body>
   <section class="header">
@@ -36,9 +36,10 @@
       </div>
       
       <!-- 관리자 담당 업무 -->
-      <div class="adminName">
-        <div th:if= "${session.loginMember}"
-             th:text="${session.loginMember.adminName}">
+      <div class="adminName"
+           th:unless = "${#lists.isEmpty(requestList)}" 
+           th:object="${loginMember}">
+        <div th:text="*{name}">
           이름이 왜안나올까?
         </div>
       </div>
@@ -95,62 +96,61 @@
   
   
     <div class="content">
-      <h2>공지사항 관리</h2>
+      <h2>발주 요청관리</h2>
       <select name="key" class="sortSelect">
         <option value="all">전체보기</option>
-        <option value="on">활성화</option>
-        <option value="no">비활성화</option>
+        <option value="Y">노출</option>
+        <option value="N">비노출</option>
       </select>
+      <button id="all">전체 선택 해제</button>
+      <button id="selectUpdate">선택한 내용 상태 변경</button>
+      <button id="selectDelete">선택한 내용 삭제</button>
 
 
     
-      <table class="notice-box">
-        <thead class="notice">
+      <table class="request-box">
+        <thead class="request">
           <tr>
-            <th class="noticeId">
-              <input type="checkbox">
-            </th>
-            <th class="noticeId">글 번호</th>
-            <th class="title">제목</th>
-            <th class="createDate">작성일자</th>
-            <th class="updateDate">수정일자</th>
-            <th class="status">활성화 상태</th>
-            <th class="button">상태 변경</th>
+            <th class="requestNo">번호</th>
+            <th class="title">책 제목</th>
+            <th class="company">출판사</th>
+            <th class="content">발주요청 부수</th>
+            <th class="status">요청 가격</th>
+            <th class="button">등록하기</th>
           </tr>
         </thead>
 
-        <tbody class="nticeContent"> 
-          <th:block th:if= "${#lists.isEmpty(noticeList)}">
+        <tbody class="requestContent"> 
+          <th:block th:if= "${#lists.isEmpty(requestList)}">
             <tr>
-              <th colspan="6">공지사항으로 등록된 자료가 없습니다.</th>
+              <th colspan="7">발주요청 된 자료가 없습니다.</th>
             </tr>
           </th:block>
 
-          <th:block th:unless="${#lists.isEmpty(noticeList)}">
-            <tr th:each= "notice:${noticeList}"
-                th:object="${notice}">  
-              <th>
-                <input type="checkbox" th:value="*{noticeId}">
-              </th>
-              <td th:text="*{noticeId}" >
-                FAQ 번호
+          <th:block th:unless="${#lists.isEmpty(requestList)}">
+            <tr th:each= "request:${requestList}"
+                th:object="${request}">  
+            
+              <td th:text="*{requestNo}" th:name="*{requestNo}">
+                발주 요청 번호
               </td>
-              <td th:text="*{title}">
+              <td th:text="*{bookTitle}">
                 어떻게 새로운 1:1 문의를 등록하나요?
               </td>
-              <td th:text="*{createDate}">
+              <td th:text="*{companyName}">
                 1:1 문의를 등록하려면 고객센터 페이지의 "1:1 문의하기" 버튼을 클릭하세요. 등록 양식을 작성한 후 "등록" 버튼을 누르면 문의가 접수됩니다. 접수된 문의는 마이페이지에서 확인 가능합니다.
               </td>
-              <td th:text="*{view}">
+              <td th:text="*{requestCount}">
                 N
               </td>
-              <td th:text="*{status}">
+              <td th:text="*{requestPrice}">
                 N
               </td>
               <td>
-                <button class="changeBtn">
-                  노출 상태 변경<input type="text" th:value="*{noticeId}" class="updateId" hidden>
+                <button class="updateBtn">
+                  노출 상태 변경<input type="text" th:value="*{requestNo}" class="updateId" hidden>
                 </button>
+                
               </td>
             </tr>
           </th:block>
@@ -158,7 +158,7 @@
       </table>
 
       
-      <div class="pagination-area" th:unless= "${#lists.isEmpty(faqList)}">
+      <div class="pagination-area" th:unless= "${#lists.isEmpty(requestList)}">
         
         <ul class="pagination" th:object="${pagination}">
           
@@ -200,9 +200,8 @@
 
       <div class="btn-area">
         <!-- 로그인 상태일 때만 글쓰기 버튼 노출 -->
-        <button id="insertBtn">새 공지사항 작성</button>                     
-        <button id="updateBtn">공지사항 수정</button>                     
-        <button id="deleteBtn">공지사항 삭제</button>                     
+        <button th:if= "${session.loginMember}"
+        id="insertBtn">신간 요청</button>                     
       </div>
   
       <div id="addPopupLayer" class="popup-layer-close">
@@ -212,7 +211,7 @@
         </div>
   
   
-        <button id="addNoticeBtn">등록하기</button>
+        <button id="addRequestBtn">등록하기</button>
         <button id="back">돌아가기</button>
       </div>
 
@@ -220,6 +219,6 @@
     
   </section>
  
-  <script src="/js/admin/adminNotice.js"></script>
+  <script src="/js/admin/adminNewBook.js"></script>
 </body>
 </html>
