--- a/src/main/resources/templates/admin/adminReview.html
+++ b/src/main/resources/templates/admin/adminReview.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>관리자 문의 관리 페이지</title>
 
-  <script src="https://kit.fontawesome.com/5eb8a8a2db.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/admin/adminReview.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
        
          <!-- 알림 버튼 -->
         <button class="notification-btn" id="my-element">
-          <i class="fa-regular fa-bell">.</i>
+          <i class="fa-regular fa-bell"></i>
           <!-- 알림 개수 표시 -->
           <div class="notification-count-area"></div>
         </button>
@@ -94,7 +94,9 @@
   
   
     <div class="content">
-      <h2>리뷰관리</h2>
+      <h2>리뷰관리
+        <i class="fa-regular fa-bell"></i>
+      </h2>
       <select class="sortSelect">
         <option value="all">최신순</option>
         <option value="gradeDown">평점 높은 순</option>
@@ -125,7 +127,9 @@
         <tbody class="reviewContent"> 
           <tr>
             <td>2024111809230</td>
-            <td>자바란 무엇인가?</td>
+            <td>
+              <i class = "fa-solid fa-star-sharp"></i>
+            </td>
             <td>3점</td>
             <td>사진없어요</td>
             <td>무슨말인지 하나도 모르겠네요. 재구매는 없습니다.</td>
